--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using Friday.ERP.Client.Data.DataTransferObjects
+@using Friday.ERP.Shared.DataTransferObjects
 @using Friday.ERP.Client.Pages.Dashboard.Components.Molecules
 @using Friday.ERP.Client.Pages.Dashboard.Components.Templates
 @using Friday.ERP.Client.Data
