--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
@@ -1,5 +1,5 @@
 @using Friday.ERP.Client.Data
-@using Friday.ERP.Client.Data.DataTransferObjects
+@using Friday.ERP.Shared.DataTransferObjects
 @using Friday.ERP.Client.Pages.Sale.Dialogs.Components.Molecules
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
