--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomTextFieldWithIcon.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomTextFieldWithIcon.razor
@@ -11,7 +11,7 @@
 
     [Parameter] public string Icon { get; set; } = Icons.Material.TwoTone.Search;
 
-    [Parameter] public string? Label { get; set; }
+    [Parameter] public string Label { get; set; } = "Search";
 
     [Parameter] public string? ClassParameter { get; set; }
 
