--- a/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
+++ b/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
@@ -4,7 +4,7 @@
 @inject ISnackbar Snackbar
 @using Microsoft.AspNetCore.SignalR.Client
 @using Newtonsoft.Json
-@using Friday.ERP.Client.Data.DataTransferObjects
+@using Friday.ERP.Shared.DataTransferObjects
 @using Friday.ERP.Client.Data
 @using Friday.ERP.Client.Shared.Layouts.MainComponents
 @inherits LayoutComponentBase
