--- a/Friday.ERP.Client/Shared/Layouts/MainComponents/NotificationBox.razor
+++ b/Friday.ERP.Client/Shared/Layouts/MainComponents/NotificationBox.razor
@@ -1,5 +1,6 @@
-@using Friday.ERP.Client.Data.DataTransferObjects
+@using Friday.ERP.Shared.DataTransferObjects
 @using Friday.ERP.Client.Data
+
 @inject IHttpRepository HttpRepo
 
 <style>
